<resources>
    <string name="app_name" translatable="false">AltanTeamApp</string>
    <string name="confirm">Confirm</string>
    <string name="enter_id">Enter ID</string>
    <string name="post">Post</string>
    <string name="comment">Comment</string>
    <string name="users">Users</string>
    <string name="photo">Photo</string>
    <string name="todo">Todo</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="about">Hello, my name is Anton.\nMy email: rygital@gmail.com\nI\'ve created this application for AtlanTeam.</string>
</resources>
